installed boostrap installed font-awesome created home-page layout

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,104 @@
-<p>home works!</p>
+<div class="container-fluid home-page">
+
+  <!-- LANDING SECTION -->
+  <div class="landing-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-7">
+          <div class="content">
+            <h1>Creatively transforming <br>
+              businesses to <span>Compete</span> <br>
+              for tomorrow
+            </h1>
+
+            <p>Experience a consultancy that prepares your business for <br>
+              <span>Uncommon growth</span> even in the face of disruption by solving <br> problems through
+              better communications.
+            </p>
+            <button class="btn btn-cta">Get in Touch <span><i class="fas fa-arrow-circle-right ml-2"></i></span></button>
+          </div>
+        </div>
+        <div class="col-md-5"></div>
+      </div>
+    </div>
+  </div>
+
+  <!-- PRODUCTS SUMMARY SECTION -->
+  <div class="products-section">
+    <div class="container">
+      <h2><span>What we do here</span></h2>
+
+      <div class="row">
+        <div class="col-md-3">
+          <div class="card">
+            <h4>Communications consultancy</h4>
+            <p>Get advice on strategic communications and marketing solutions
+              tailored to your requirements to boost your project from communication planning to media materials.
+            </p>
+
+            <button class="btn btn-view">learn more <span><i class="fas fa-arrow-circle-right ml-2"></i></span></button>
+            <!-- <ul>
+              <li>Strategic communications planning</li>
+              <li>Key messages development</li>
+              <li>Project management</li>
+              <li>Copywriting services</li>
+              <li>Development of Media materials</li>
+              <li>Content strategy development</li>
+            </ul> -->
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card">
+            <h4>Media production and Motion graphics</h4>
+            <p>Understanding the creative process in film making from concept development
+              to storyboarding can be mentally-draining, we will help you build an idea to a strong visualization.</p>
+
+            <button class="btn btn-view">learn more <span><i class="fas fa-arrow-circle-right ml-2"></i></span></button>
+
+            <!-- <ul>
+              <li>Concept Development</li>
+              <li>Storyboarding and Scriptwriting </li>
+              <li>Filming (In-studio and On-location)</li>
+              <li>Photography</li>
+              <li>Editing</li>
+              <li>Animation / Motion Graphics</li>
+            </ul> -->
+          </div>
+
+        </div>
+
+        <div class="col-md-3">
+          <div class="card">
+            <h4>Graphic design and Branding</h4>
+            <p>Branding and visual identity are all around us,
+              we will guiding you to build a visual identity that can help you make more thoughtful design decisions in your business.</p>
+
+            <button class="btn btn-view">learn more <span><i class="fas fa-arrow-circle-right ml-2"></i></span></button>
+
+            <!-- <ul>
+              <li>Logo and Branding materials</li>
+              <li>Infographics and icons</li>
+              <li>Documents and annual Reports</li>
+              <li>Animations</li>
+            </ul> -->
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card">
+            <h4>Language translations</h4>
+            <p>We offer proffessional translators that are richly invested in a vast array of linguistics, to make it easier to interpret and render texts / speech accurately and quickly and spot errors</p>
+
+            <button class="btn btn-view">learn more <span><i class="fas fa-arrow-circle-right ml-2"></i></span></button>
+
+            <!-- <ul>
+              <li>French</li>
+              <li>English</li>
+            </ul> -->
+          </div>
+
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
