--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,3 +6,19 @@
 @import '../node_modules/@fortawesome/fontawesome-free/css/solid.css';
 @import '../node_modules/@fortawesome/fontawesome-free/css/brands.css';
 @import '../node_modules/@fortawesome/fontawesome-free/css/all.css'; // blue - #1472C8
+
+body {
+  scroll-behavior: smooth;
+  letter-spacing: 1px;
+  margin: 0;
+  padding: 0;
+  // font-family: 'Roboto', sans-serif!important;
+  font-family: 'Montserrat', sans-serif !important;
+}
+
+.main-container{
+  padding: 54px 0;
+}
+.container-fluid{
+  padding: 0px;
+}
