set layout for footer added first draft layout on home page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -23,6 +23,34 @@
     </div>
   </div>
 
+  <div class="companies-section ">
+    <div class="container">
+
+      <div class="col-md-8">
+        <h5>Igicu Africa Consultancy Limited has over <span>30 years</span> of experience in
+          Corporate Communications, Sales and Marketing , under the leadership of the
+          founder, <span>Liliane Binagwaho</span>.
+        </h5>
+      </div>
+
+
+      <div class="row">
+        <!-- <div class="col-md-3"> -->
+        <img class="cta-image" src="assets/images/shell.svg" alt="logo">
+        <!-- </div> -->
+        <!-- <div class="col-md-3"> -->
+        <img class="cta-image" src="assets/images/total.png" alt="logo">
+        <!-- </div> -->
+        <!-- <div class="col-md-3"> -->
+        <img class="cta-image" src="assets/images/coca-cola-logo.png" alt="logo">
+        <!-- </div> -->
+        <!-- <div class="col-md-3"> -->
+        <img class="cta-image py-2" src="assets/images/equity-bank-logo.png" alt="logo">
+        <!-- </div> -->
+      </div>
+    </div>
+  </div>
+
   <!-- PRODUCTS SUMMARY SECTION -->
   <div class="products-section">
     <div class="container">
@@ -99,6 +127,69 @@
         </div>
       </div>
 
+    </div>
+  </div>
+
+  <div class="call-to-action-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="content">
+            <h2>Get an amazing consultancy <br>
+              experience with our <br>
+              <span>Proficient team</span>
+            </h2>
+
+            <div class="row">
+              <div class="col-md-5">
+                <div class="card green-bg">
+
+                  <div class="set-size">
+                    <div class="pie-wrapper progress-95 style-2">
+                      <span class="label">95<span class="smaller">%</span></span>
+                      <div class="pie">
+                        <div class="left-side half-circle"></div>
+                        <div class="right-side half-circle"></div>
+                      </div>
+                      <!-- <div class="shadow"></div> -->
+                    </div>
+                  </div>
+
+                  <p>Problem solving</p>
+
+                </div>
+              </div>
+              <div class="col-md-5">
+                <div class="card black-bg">
+                  <div class="set-size">
+                    <div class="pie-wrapper progress-65 style-2">
+                      <span class="label">65<span class="smaller">%</span></span>
+                      <div class="pie">
+                        <div class="left-side half-circle"></div>
+                        <div class="right-side half-circle"></div>
+                      </div>
+                      <!-- <div class="shadow"></div> -->
+                    </div>
+                  </div>
+
+                  <p>Business growth</p>
+
+                </div>
+              </div>
+
+            </div>
+
+            <button class="btn btn-cta">Get in Touch <span><i class="fas fa-arrow-circle-right ml-2"></i></span></button>
+
+          </div>
+        </div>
+        <div class="col-md-6">
+          <img class="cta-image" src="assets/images/team.svg" alt="logo">
+
+
+
+        </div>
+      </div>
     </div>
   </div>
 </div>
