--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,1 +1,60 @@
-<p>footer works!</p>
+<div class="footer">
+  <div class="container">
+
+    <div class="row">
+      <div class="col-md-4">
+
+        <img class="logo" src="assets/images/logo-02.svg" alt="logo">
+
+
+      </div>
+      <div class="col-md-8">
+
+        <div class="row">
+          <div class="col-md-8">
+            <h5>Follow us on social media</h5>
+            <div class="wrap mb-4">
+
+              <span title="facebook"><i class="fab fa-facebook-f"></i></span>
+              <span title="instagram"><i class="fab fa-instagram"></i></span>
+              <span title="whatsapp"><i class="fab fa-whatsapp pl-1"></i></span>
+
+            </div>
+
+            <h5>Services</h5>
+            <ul>
+              <li>Communications consultancy</li>
+              <li>Media production and Motion graphics</li>
+              <li>Graphic design and Branding</li>
+              <li>Language translations</li>
+            </ul>
+
+
+          </div>
+          <div class="col-md-4">
+
+            <h5>Any inquiries</h5>
+
+            <div class="wrap mb-4">
+              <span><i class="fas fa-phone-alt mr-1"></i></span>
+              <span style="color: #f1f1f1;cursor:pointer" class="border-bottom pb-1">(254)700 000 000</span>
+            </div>
+
+            <h5>Resources</h5>
+            <ul>
+              <li>Terms & Conditions</li>
+              <li>Blog</li>
+              <li>Help</li>
+            </ul>
+
+
+
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+
+</div>
