--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -4,7 +4,7 @@
   padding-right: 100px;
 
   .navbar-brand {
-    height: 60px;
+    height: 56px;
   }
 
   .nav-item {
@@ -12,19 +12,20 @@
   }
 
   .nav-link {
-    color: #39C16C;
+    color: #62A851;
     font-weight: 600;
     letter-spacing: 1.5px;
-    font-family: 'Roboto', sans-serif!important;
+    // font-family: 'Roboto', sans-serif!important;
     border-radius: 3px;
-    font-size: 1.2rem;
+    font-size: 1rem;
+    padding-bottom: 3px;
 
     &:hover {
-      border-bottom: 3px solid #39C16C33;
+      border-bottom: 3px solid #62A85133;
     }
   }
 }
 
 .active-link {
-  border-bottom: 3px solid #39C16C!important;
+  border-bottom: 3px solid #62A851!important;
 }
