--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,9 +16,29 @@ body {
   font-family: 'Montserrat', sans-serif !important;
 }
 
-.main-container{
-  padding: 54px 0;
+* a,
+* button {
+  outline: none !important;
+  box-shadow: none !important;
 }
-.container-fluid{
-  padding: 0px;
+
+img::selection {
+  background-color: transparent !important;
+}
+
+* img {
+  user-drag: none !important;
+  user-select: none !important;
+  -moz-user-select: none !important;
+  -webkit-user-drag: none !important;
+  -webkit-user-select: none !important;
+  -ms-user-select: none !important;
+}
+
+.main-container {
+  padding-top: 54px;
+}
+
+.container-fluid {
+  padding: 0;
 }
