--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
-@import './assets/css/font-montserrat.css';
-@import './assets/css/font-roboto.css';
+@import 'assets/css/font-montserrat.css';
+@import 'assets/css/font-roboto.css';
 @import '../node_modules/@fortawesome/fontawesome-free/css/fontawesome.css';
 @import '../node_modules/@fortawesome/fontawesome-free/css/solid.css';
 @import '../node_modules/@fortawesome/fontawesome-free/css/brands.css';
