fixed issue where default route was failing on first-time load added responsiveness enhancments on home, navbar & footer

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -42,3 +42,17 @@ img::selection {
 .container-fluid {
   padding: 0;
 }
+
+
+@media (max-width: 3000px) {
+}
+@media (max-width: 2000px) {
+}
+@media (max-width: 1700px) {
+}
+@media (max-width: 1500px) {
+}
+@media (max-width: 1370px) {
+}
+@media (max-width: 770px) {
+}
