--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -124,7 +124,7 @@
     will-change: transform;
     border-bottom: 1px solid #f1f1f1;
 
-    h5{
+    h5 {
       font-weight: 600;
       color: #5f6063;
       margin-bottom: 50px;
@@ -134,9 +134,9 @@
       }
     }
 
-    .cta-image{
+    .cta-image {
       height: 100px;
-      margin: 0px 30px;
+      margin: 0 30px;
       object-fit: contain;
     }
   }
@@ -171,7 +171,6 @@
       width: 94%;
       height: 250px;
       box-shadow: 7px 7px 0 0 rgba(0,0,0,0.09);
-
     }
 
     .green-bg {
@@ -215,7 +214,6 @@
       padding: 12px 30px;
       transition: all 0.1s ease;
       margin-top: 30px;
-
 
       &:hover {
         background-color: #569347;
@@ -319,4 +317,93 @@
 
 .pie-wrapper.progress-65 .pie .right-side {
   transform: rotate(180deg);
+}
+@media (max-width: 3000px) {}
+@media (max-width: 2000px) {}
+@media (max-width: 1700px) {}
+@media (max-width: 1500px) {}
+@media (max-width: 1370px) {}
+@media (max-width: 770px) {
+  .landing-section {
+    .content {
+      padding-top: 60px!important;
+      padding-bottom: 30px;
+
+      h1 {
+        font-size: 2.5rem!important;
+        line-height: 45px!important;
+
+        br {
+          display: none!important;
+        }
+      }
+
+      p {
+        br {
+          display: none!important;
+        }
+      }
+    }
+  }
+
+  .companies-section {
+    padding: 30px 0 !important;
+
+    .cta-image {
+      height: auto!important;
+      max-width: 120px;
+      object-fit: contain!important;
+      margin: 0 30px;
+    }
+  }
+
+  .products-section {
+    padding: 30px 20px !important;
+    height: auto!important;
+    border-bottom: 1px solid #f1f1f1;
+    background-image: linear-gradient(20deg, #FCFCFC 50% , #62A851 50%)!important;
+
+    h2 {
+      color: #f1f1f1!important;
+      font-size: 1.7rem;
+
+      span {
+        border-bottom: 3px solid #f1f1f1!important;
+      }
+    }
+  }
+
+  .call-to-action-section {
+    .content {
+      padding: 30px 10px !important;
+
+      h2 {
+        font-size: 2rem;
+
+        br {
+          display: none!important;
+        }
+      }
+
+      .card {
+        border: none;
+        width: 60%;
+        height: 250px;
+        box-shadow: 7px 7px 0 0 rgba(0,0,0,0.09);
+      }
+
+      .black-bg {
+        margin-top: 30px!important;
+        margin-left: 30%;
+      }
+    }
+
+    .cta-image {
+      width: 100%;
+      height: auto;
+      margin-top: 0!important;
+      margin-top: 150px;
+      filter: drop-shadow(0px 3px 40px #62A85144);
+    }
+  }
 }
