--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -2,7 +2,7 @@
   background-color: #3c4043;
   padding: 40px 0;
 
-  .logo{
+  .logo {
     width: 80%;
     border-radius: 50px 0 50px 0;
   }
@@ -40,17 +40,25 @@
     }
   }
 
-  ul{
+  ul {
     list-style-type: none;
     padding-left: 0;
-    li{
+
+    li {
       color: #f1f1f1;
       padding: 5px 0;
       cursor: pointer;
 
-      &:hover{
+      &:hover {
         text-decoration: underline;
       }
     }
+  }
+}
+@media (max-width: 770px) {
+  .logo {
+    width: 200px!important;
+    margin-bottom: 20px;
+    border-radius: 50px 0 50px 0;
   }
 }
