--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -29,3 +29,14 @@
 .active-link {
   border-bottom: 3px solid #62A851!important;
 }
+
+@media (max-width: 770px) {
+  .navbar{
+    padding: 5px 0;
+    padding-left: 10px;
+  }
+  .navbar-brand {
+    width: 200px;
+    height: auto;
+  }
+}
