--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -49,6 +49,7 @@
         border-radius: 2px;
         padding: 12px 30px;
         transition: all 0.1s ease;
+        margin-bottom: 30px;
 
         &:hover {
           background-color: #569347;
