--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,1 +1,246 @@
-<p>products works!</p>
+<div class="container-fluid products-page" [@fadeIn]>
+
+  <div class="landing-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <h1>Our Services </h1>
+          <p>Get an amazing consultancy experience <br>
+            with our <span>Proficient team</span>
+          </p>
+
+          <button class="btn btn-cta">Get in Touch <span><i class="fas fa-arrow-circle-right ml-2"></i></span></button>
+
+        </div>
+        <div class="col-md-6">
+          <img class="cta-image" src="assets/images/services.svg" alt="logo">
+
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <div class="content" id="product1">
+    <div class="container">
+
+      <h3 class="section-heading">Communications Consulting</h3>
+
+      <div class="row">
+
+        <div class="col-md-3">
+          <div class="card">
+            <h4>Strategic communications planning</h4>
+            <p>Get advice on strategic communications and marketing solutions
+              tailored to your requirements to boost your project from communication planning to media materials.
+            </p>
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="card">
+            <h4>Key messages development</h4>
+            <p>Get advice on strategic communications and marketing solutions
+              tailored to your requirements to boost your project from communication planning to media materials.
+            </p>
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="card">
+            <h4>Project management</h4>
+            <p>Get advice on strategic communications and marketing solutions
+              tailored to your requirements to boost your project from communication planning to media materials.
+            </p>
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="card">
+            <h4>Copywriting services</h4>
+            <p>Get advice on strategic communications and marketing solutions
+              tailored to your requirements to boost your project from communication planning to media materials.
+            </p>
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="card">
+            <h4>Development of Media materials</h4>
+            <p>Get advice on strategic communications and marketing solutions
+              tailored to your requirements to boost your project from communication planning to media materials.
+            </p>
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="card">
+            <h4>Content strategy development</h4>
+            <p>Get advice on strategic communications and marketing solutions
+              tailored to your requirements to boost your project from communication planning to media materials.
+            </p>
+          </div>
+        </div>
+
+
+        <div class="col-md-3">
+          <div class="card">
+            <h4>Digital marketing communication</h4>
+            <p>Get advice on strategic communications and marketing solutions
+              tailored to your requirements to boost your project from communication planning to media materials.
+            </p>
+          </div>
+        </div>
+
+
+
+      </div>
+
+    </div>
+  </div>
+
+  <div class="content" id="product2">
+    <div class="container">
+
+      <h3 class="section-heading">Media Production and Motion Graphics</h3>
+
+      <div class="row">
+
+        <div class="col-md-3">
+          <div class="card">
+            <h4>Concept development</h4>
+            <p>Get advice on strategic communications and marketing solutions
+              tailored to your requirements to boost your project from communication planning to media materials.
+            </p>
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="card">
+            <h4>Storyboarding</h4>
+            <p>Get advice on strategic communications and marketing solutions
+              tailored to your requirements to boost your project from communication planning to media materials.
+            </p>
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="card">
+            <h4>Filming <span>(In-studio and On-location)</span></h4>
+            <p>Get advice on strategic communications and marketing solutions
+              tailored to your requirements to boost your project from communication planning to media materials.
+            </p>
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="card">
+            <h4>Editing</h4>
+            <p>Get advice on strategic communications and marketing solutions
+              tailored to your requirements to boost your project from communication planning to media materials.
+            </p>
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="card">
+            <h4>Animation / Motion graphics</h4>
+            <p>Get advice on strategic communications and marketing solutions
+              tailored to your requirements to boost your project from communication planning to media materials.
+            </p>
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="card">
+            <h4>Photography</h4>
+            <p>Get advice on strategic communications and marketing solutions
+              tailored to your requirements to boost your project from communication planning to media materials.
+            </p>
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="card">
+            <h4>Scriptwriting</h4>
+            <p>Get advice on strategic communications and marketing solutions
+              tailored to your requirements to boost your project from communication planning to media materials.
+            </p>
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+  </div>
+
+  <div class="content" id="product3">
+    <div class="container">
+
+      <h3 class="section-heading">Graphic Design and Branding</h3>
+
+      <div class="row">
+
+        <div class="col-md-3">
+          <div class="card">
+            <h4>Logo and Branding materials</h4>
+            <p>Get advice on strategic communications and marketing solutions
+              tailored to your requirements to boost your project from communication planning to media materials.
+            </p>
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="card">
+            <h4>Infographics and icons</h4>
+            <p>Get advice on strategic communications and marketing solutions
+              tailored to your requirements to boost your project from communication planning to media materials.
+            </p>
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="card">
+            <h4>Documents and Annual reports</h4>
+            <p>Get advice on strategic communications and marketing solutions
+              tailored to your requirements to boost your project from communication planning to media materials.
+            </p>
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="card">
+            <h4>Animations</h4>
+            <p>Get advice on strategic communications and marketing solutions
+              tailored to your requirements to boost your project from communication planning to media materials.
+            </p>
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+  </div>
+
+  <div class="content" id="product4">
+    <div class="container">
+
+      <h3 class="section-heading">Language translations</h3>
+
+      <div class="row">
+
+        <div class="col-md-3">
+          <div class="card">
+            <h4>Logo and Branding materials</h4>
+            <p>Get advice on strategic communications and marketing solutions
+              tailored to your requirements to boost your project from communication planning to media materials.
+            </p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+
+</div>
