--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -19,6 +19,8 @@
     border-radius: 3px;
     font-size: 1rem;
     padding-bottom: 3px;
+    border-bottom: 3px solid #fff;
+
 
     &:hover {
       border-bottom: 3px solid #62A85133;
