--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,1 +1,75 @@
-<p>contact works!</p>
+<div class="container-fluid contact-page" [@fadeIn]>
+
+  <div class="landing-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <h1>Contact Us</h1>
+          <p>Reach out to us and experience a consultancy that prepares your business for
+            <span>Uncommon growth</span>
+          </p>
+
+          <!-- <button class="btn btn-cta">Get in Touch <span><i class="fas fa-arrow-circle-right ml-2"></i></span></button> -->
+
+        </div>
+        <div class="col-md-6">
+          <img class="cta-image" src="assets/images/contact.svg" alt="logo">
+
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <div class="content">
+    <div class="container">
+      <h3><u>Send us a message</u></h3>
+
+      <div class="row">
+        <div class="col-md-5">
+          <form>
+            <div class="form-group">
+              <label>Name (or Company name)</label>
+              <input class="form-control" type="text">
+            </div>
+            <div class="form-group">
+              <label>Email</label>
+              <input class="form-control" type="email">
+            </div>
+            <div class="form-group">
+              <label>Subject</label>
+              <input class="form-control" type="text">
+            </div>
+            <div class="form-group">
+              <label>Message</label>
+              <textarea class="form-control" name="name" rows="3"></textarea>
+            </div>
+
+            <button class="btn btn-send">SEND</button>
+          </form>
+        </div>
+
+        <div class="col-md-2">
+        </div>
+
+        <div class="col-md-5">
+          <div class="row">
+            <div class="col-6 col-md-6">
+              <h5>Head Office</h5>
+              <p>Along **** ***** , <br>
+                Nairobi, Kenya
+              </p>
+            </div>
+            <div class="col-6 col-md-6"></div>
+            <div class="col-12 col-md-6">
+              <h5>Have an inquirie?</h5>
+              <p>Email us on <br>
+                <u>info@igicu.co.ke</u>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
